<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Where Do We Eat?</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="loading">Loading..</string>
    <string name="google_map_uri"><![CDATA[http://maps.google.com/maps?saddr=%s&daddr=%s]]></string>
    <string name="no_results">No Results!</string>
    <string name="fetching">Hang on, fetching your current location.</string>
    <string name="enable_gps">Make sure to enable gps in system settings. </string>
    <string name="how_about">how about...</string>
    <string name="min_rating">Min Rating:</string>
    <string name="distance">Distance:</string>
    <string name="rating">Rating:</string>
    <string name="lets_roll">let\'s roll!</string>
    <string name="what_else">what else ya got?</string>

</resources>
